# autora-theorist-example

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/example_theorist/: __init__.py
tests/: test_example_theorist.py
